[package]
name = "actix-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
actix-files = "0.6.6"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.21"
